# razor

./: .gitignore  README.md  pyproject.toml
curvemod/: __init__.py  avipy.py  linreg.py  lowess.py  lowess2.py  sigmoid.py
plotty/: __init__.py  curvature.py  plot.py  utils.py
vizzy/: __init__.py  flower.py  heatermap.py
