[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "razor"
authors = [
	{name = "Aizan Fahri"},
]
description = "Aizan's personal collection of razor tools for plotting"
requires-python = ">=3.7"
license = {text = "MIT"}
dependencies = [
	"numpy",
	"scikit-learn",
	"matplotlib",
	"pandas",
	"scipy",
	"statsmodels"
]
version = "0.0.1"

[tool.setuptools]
packages = [
	"curvemod",
	"vizzy",
	"plotty"
]
